manifests/base/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  clusterIP: None  # Use headless service for better scalability and discovery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  securityContext:
    runAsNonRoot: true
    allowPrivilegeEscalation: false
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: cyberw/locust-timescale:6 #postgres:latest
        ports:
        - containerPort: 5432
          capabilities:
            drop: ["ALL"]
        resources:
          limits:
            cpu: "2"
            memory: "5Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: data-pvc
