manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-service
  namespace: locust
spec:
  selector:
    app: locust
