manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: locust
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: locust.serve-dev.scilifelab.se #localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: locust-service
                port:
                  number: 80
